--- a/src/App.html
+++ b/src/App.html
@@ -1,16 +1,20 @@
 <div id="app">
-    <template v-if="!logged">
+    <template v-if="!this.logged">
         <Auth></Auth>
     </template>
-    <div class="container" v-bind:class="{ fullHeight: !logged }">
+    <div class="container" :class="{ fullHeight: !this.logged }">
         <div class="header">
             <div class="title">
                 <img alt="Phrase" src="https://developers.phrase.com/api/phrase-logo.png"> <span class="title-desc">Code challenge</span>
             </div>
-            <div class="login" v-if="logged">
+            <div class="login" v-if="this.logged">
+                <span v-if="user"><account-icon :size="iconSize"></account-icon>{{ user }}</span>
                 <button class="header-button" type="button" @click="logOut()">Logout</button>
             </div>
         </div>
+        <div class="content" v-if="this.logged">
+            <Projects :projects="this.projects"></Projects>
+        </div>
     </div>
-    <router-view/>
+    <router-view></router-view>
 </div>
